--- a/ExorLive.Client.WebWrapper/MainWindow.xaml
+++ b/ExorLive.Client.WebWrapper/MainWindow.xaml
@@ -5,7 +5,7 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:tb="http://www.hardcodet.net/taskbar" x:Name="MainWIndow" x:Class="ExorLive.Client.WebWrapper.MainWindow"
 		mc:Ignorable="d"
-		Title="ExorLive WebWrapper" Height="768" Width="1024" Closing="MainWIndow_Closing" VerticalContentAlignment="Stretch" Icon="exorlive.ico">
+		Title="ExorLive WebWrapper" Height="768" Width="1024" Closing="MainWIndow_Closing" VerticalContentAlignment="Stretch" Icon="exorlive.ico" MinHeight="500" MinWidth="800">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
