--- a/SetupProject/Product.wxs
+++ b/SetupProject/Product.wxs
@@ -14,7 +14,7 @@
 			<Directory Id="DesktopFolder"></Directory>
 			<Directory Id="AppDataFolder" SourceName="Application Data">
 				<Directory Id="Path_ManufacturerFolder" Name="ExorLive">
-					<Directory Id="Path_ProductFolder" Name="ExorLive Webwrapper" />
+					<Directory Id="INSTALLDIR" Name="ExorLive Webwrapper" />
 				</Directory>
 			</Directory>
 		</Directory>
@@ -24,15 +24,15 @@
 				<RegistryValue Root="HKCU" Key="Software\ExorLive" Name="installed" Type="integer" Value="1" KeyPath="yes" />
 			</Component>
 		</DirectoryRef>
-		<DirectoryRef Id ="Path_ProductFolder">
+		<DirectoryRef Id ="INSTALLDIR">
 			<Component Id ="Comp_RegistryPath" Guid="{600a177e-2721-4e0e-8aa4-85561d294333}">
 				<!-- Old version registry path that should point to the new install location -->
-				<RegistryValue Root="HKCU" Key="Software\Exor Live\Exor Live WebWrapper" Name="path" Type="string" Value="[Path_ProductFolder]" KeyPath="yes" />
+				<RegistryValue Root="HKCU" Key="Software\Exor Live\Exor Live WebWrapper" Name="path" Type="string" Value="[INSTALLDIR]" KeyPath="yes" />
 				<RegistryValue Root="HKCU" Key="Software\Exor Live\Exor Live WebWrapper" Name="version" Type="string" Value="[ProductVersion]" />
 			</Component>
 			<Component Id ="Comp_ProductFolder" Guid="{f11e4c93-9c6a-4058-9e5a-6556424c76f2}" >
-				<RemoveFolder Id="Path_ProductFolder" On="uninstall" />
-				<RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Name="path" Type="string" Value="[Path_ProductFolder]" KeyPath="yes" />
+				<RemoveFolder Id="INSTALLDIR" On="uninstall" />
+				<RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Name="path" Type="string" Value="[INSTALLDIR]" KeyPath="yes" />
 				<RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]" Name="version" Type="string" Value="[ProductVersion]" />
 			</Component>
 			<Component Id="Comp_eoBrowserObjectjs" Guid="{AF74DAAE-998E-4D4E-AC45-542FAA8C5490}">
