Fix for trouble running webwrapper and hanging.
Fixed by EnableEOWP.

--- a/ExorLive.Client.WebWrapper/MainWindow.xaml
+++ b/ExorLive.Client.WebWrapper/MainWindow.xaml
@@ -3,6 +3,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:eo="http://schemas.essentialobjects.com/wpf/"
 		xmlns:tb="http://www.hardcodet.net/taskbar" x:Name="MainWIndow" x:Class="ExorLive.Client.WebWrapper.MainWindow"
 		mc:Ignorable="d"
 		Title="ExorLive WebWrapper" Height="768" Width="1024" Closing="MainWindow_Closing" VerticalContentAlignment="Stretch" Icon="exorlive.ico" MinHeight="500" MinWidth="800">
