--- a/ExorLive.Client.WebWrapper/App.xaml
+++ b/ExorLive.Client.WebWrapper/App.xaml
@@ -2,6 +2,10 @@
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup">
 	<Application.Resources>
-
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="StyleDictionary.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
 	</Application.Resources>
 </Application>
