--- a/ExorLive.Client.WebWrapper/StyleDictionary.xaml
+++ b/ExorLive.Client.WebWrapper/StyleDictionary.xaml
@@ -285,5 +285,9 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
-	
+
+	<Style x:Key="StatusBarInternetExplorer" TargetType="StatusBar">
+		<Setter Property="Padding" Value="20,0,20,0" />
+	</Style>
+
 </ResourceDictionary>
